fixed overflow

--- a/bi-connect/styles/Post.module.scss
+++ b/bi-connect/styles/Post.module.scss
@@ -1,4 +1,5 @@
 .posts-container {
+  overflow: auto;
   height: 90%;
   width: 90%;
   border-radius: 0.75em;
